# CS_Knowledge

./: README.md  learngit.docx  qo1.cc  start.sh  x_r.csv
UEFI/: helloUefi.md
algorithm/: list.c
controller/: controller.cpp  twinscontroller.cpp
controller/thruster/: CMakeLists.txt  controllerdata.h  gnuplot-iostream.h  priority.h  testthrust_osqp.cc  thrust_TAK.cc  thrustallocation.h  thrustallocation_osqp.h  thrustallocation_osqp_.h
tcpl/: README.md
tcpl/code/: Makefile  file.txt  makeAll.sh  makeClean.sh  testAll.sh
tcpl/code/chapter_1/: 1-1  1-1.c  intel_exam  intel_exam_3  intel_exam_3.c
tcpl/code/chapter_1/exercise/: exercise_1-1  exercise_1-1.c  exercise_1-10  exercise_1-10.c  exercise_1-12  exercise_1-12.c  exercise_1-13  exercise_1-13.c  exercise_1-14  exercise_1-14.c  exercise_1-15  exercise_1-15.c  exercise_1-16  exercise_1-16.c  exercise_1-17  exercise_1-17.c  exercise_1-18  exercise_1-18.c  exercise_1-19  exercise_1-19.c  exercise_1-2  exercise_1-2.c  exercise_1-20  exercise_1-20.c  exercise_1-21  exercise_1-21.c  exercise_1-22  exercise_1-22.c  exercise_1-23  exercise_1-23.c  exercise_1-24  exercise_1-24.c  exercise_1-3  exercise_1-3.c  exercise_1-4  exercise_1-4.c  exercise_1-5  exercise_1-5.c  exercise_1-6  exercise_1-6.c  (+6 more)
tcpl/code/chapter_3/: 3-1  3-1.c  3-2  3-2.c
tcpl/code/chapter_3/exercise/: exercise_3-1  exercise_3-1.c  exercise_3-2  exercise_3-2.c
tcpl/code/chapter_5/: 5-1.c
tcpl/code/chapter_5/exercise/: Makefile  exercise_5-1.c
tcpl/code/chapter_7/: 7-1  7-1.c
tcpl/code/chapter_7/exercise/: 7-1  7-1.c
tool_chain/: GoogleCstyle.md  compile.md  git.md  linuxcommand.md
